Fix: navbar not collapsing

--- a/frontend/psd-prototype/src/App.css
+++ b/frontend/psd-prototype/src/App.css
@@ -46,7 +46,7 @@ li {
 
 /* Media screen size */
 @media screen and (min-width: 768px) {
-  button {
+  .menu-hamburger-icon {
       display: none;
   }
 
